# epri-td-operations-dashboard

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
agents/ami-backcast-forecast/: prompt.md  spec.yaml
agents/ami-data-validation/: prompt.md  spec.yaml
agents/constraint-forecasting/: prompt.md  spec.yaml
agents/domestic-outage-detection/: prompt.md  spec.yaml
agents/extreme-weather-forecast/: prompt.md  spec.yaml
agents/high-speed-recording/: prompt.md  spec.yaml
agents/market-price-forecast/: prompt.md  spec.yaml
agents/oms-knowledge-retrieval/: prompt.md  spec.yaml
agents/orchestrator/: prompt.md  spec.yaml
agents/reliability-index-analytics/: prompt.md  spec.yaml
agents/storm-response-coordination/: prompt.md  spec.yaml
agents/tools/: pyproject.toml
agents/tools/ami_tools/: __init__.py  dispatch.py  schemas.py
agents/tools/tests/: test_dispatch.py
apps/dashboard-api/: .dockerignore  Dockerfile  requirements.txt
apps/dashboard-api/app/: agents.py  config.py  main.py  simulator.py  store.py
apps/dashboard-web/: Dockerfile  entrypoint.sh  index.html  nginx-runtime.conf  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/dashboard-web/src/: App.tsx  index.css
docs/: agents.md  architecture.md  demo-script.md  deploy.md
infra/: main.bicep  main.parameters.example.json
infra/modules/: acr.bicep  containerapps.bicep  cosmos.bicep  foundry.bicep  identity.bicep  monitor.bicep
scripts/: deploy.ps1  deploy.sh  requirements.txt  seed-foundry-agents.py
(+10 files in other folders)
